--- a/README
+++ b/README
@@ -9,6 +9,8 @@ Single-user (for now?)
 Supports: AIM (just AIM for now)
 messages on player login & logoff
 chat through IM
+can send commands to the server
+message queue, so can get messages if the recipiant is offline once they login
 
 API :D
 
@@ -40,22 +42,26 @@ public interface ChatMessageHandler {
 // then: 
 messenger.registerMessageHandler(your class);
 
-Known Bugs:
-the AIM client sometimes does not recieve a message if it contains a period.
-- can't figure out why, so just don't send periods in chat & you'll be fine.
 
 TODO:
 add more protocols ?
-if chat is turned off, turn on for a set time if send a chat message
--- find out how to send commands as an op, and retrieve the output from the command..
-or: add more commands, maybe a custom command register method for API
 more users to send notifications to ?
 list of users to check for login (and ignore others) ?
 custom player-created "pounces" to notify when a given player logs in (w/ permissions) ?
-message queue, so can get messages if the recipiant is offline onc they login  ?
 
 
 Changelog:
+
+Version 0.1.2 - 3/27/11
+the user set as sendTo can send commands as op and retrieve the output from the command
+if chat is turned off, there is a configurable time after sending a chat message that you can recieve a reply
+
+
+Version 0.1.1 - 3/25/11
+a custom command register method added for API
+message queue, so can get messages if the recipiant is offline once they login
+figured out the missed message bug :)
+
 
 Version 0.1 - 3/25/11
 Initial Release
