--- a/README
+++ b/README
@@ -52,6 +52,10 @@ custom player-created "pounces" to notify when a given player logs in (w/ permis
 
 Changelog:
 
+Version 0.1.4 - 3/29/11
+fixed double-newline
+fixed null pointer exception on start
+
 
 Version 0.1.3 - 3/28/11
 removed some debug output
